[package]
name = "typst-web-preview"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
hostname = "0.4.0"
rust-embed = "8.5.0"
tempdir = "0.3.7"
tokio = {version= "1.42.0", features=["full"]}
tokio-stream = { version = "0.1.17", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
